welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:2: error: Missing closing brace `}' assumed here
var x=0
^ColumnByColumn:10: error: ';' expected but ')' found.
)
^